--- a/about.html
+++ b/about.html
@@ -26,138 +26,13 @@
 </head>
 
 
-<body data-barba="wrapper" style="background: #fff;" data-page-loader="true">
-    <div class="init-load" style="    background: linear-gradient(45deg, #00020f, #040000);">
-        <div id="noise2"></div>
-        <div class="inner align-b">
-            <div class="counter c-first">
-                <div class="count">
-                    <!-- <span>0</span>
-                    <span class="t">1</span> -->
-                </div>
-            </div>
-            <div class=" counter c-second">
-                <div class="count">
-                    <!-- <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span class="t">0</span> -->
-                </div>
-            </div>
-            <div class="counter c-third">
-                <div class="count">
-                    <!-- <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span class="t">0</span> -->
-                </div>
-            </div>
-            <span class="percentage load-text" style="position: relative;">preparing your experience... </span>
-        </div>
+<body data-barba="wrapper" style="background: #fff;" data-header-sticky="true" data-menu-style="overlay"
+    data-page-loader="true">
+    <div data-duration="5" class="alioth-page-loader" data-layout="dark">
+        <span class="apl-background"></span>
+
+        <div class="apl-count"></div>
+
     </div>
     <header>
         <a class="en-logo" href="index.html">
@@ -2274,6 +2149,7 @@
 
 
     <script src="/assets/vendors/lib/plugins.js"></script>
+    <script src="/assets/resources/js/pages-js/preloader.js"></script>
     <script src="./assets/resources/js/cursor.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script
