--- a/patronum.html
+++ b/patronum.html
@@ -344,14 +344,20 @@
                                     <div>
                                         <p class="text_anim ">
                                             <span>
-                                                Patronum is a swiss army knife for Google
-                                                Workspace™ administrators. It saves
-                                                time by automating repetitive and monotonous tasks like Email Signature
-                                                Management, Contact Sharing, Drive Management and much more. Patronum
-                                                transform the way Google Workspace™ capabilities are managed.
+                                                Patronum is a swiss army knife for Google Workspace™ administrators.
+                                                Patronum transforms the ways in which Google Workplace™ capabilities are
+                                                managed by automatically performing repetitive and monotonous actions
+                                                like email signature management, contact sharing, drive management, etc.
                                             </span>
                                         </p>
+                                        <p class="text_anim ">
+                                            <span>
 
+                                                Enigma worked hand-in-hand with Patronum to envision a stunning brand
+                                                identity and a website for their company.
+
+                                            </span>
+                                        </p>
                                     </div>
                                 </div>
                                 <div>
@@ -359,7 +365,7 @@
                                         <li>
                                             <h3><span>URL</h3>
                                             </span>
-                                            <p><a href="www.patronum.io"><span>www.patronum.io</span></a></p>
+                                            <p><a href="#"><span>www.patronum.io</span></a></p>
                                         </li>
                                     </ul>
                                 </div>
@@ -384,22 +390,55 @@
                     </div>
                 </div>
                 <div id="portf" class="grid_intern" data-bgcolor="#fff" data-humcolor="#000">
-                    <div data-scroll class="new-grid">
+                    <div data-scroll>
                         <div class="text_anim">
                             <h2 data-scroll-target="#portf">
-                                <span>
-                                    The Brief </span>
+                                <span>The Story: </span>
                             </h2>
                         </div>
-
+                        <div class="text_anim ">
+                            <p>
+                                <span>
+                                    Paul Lees, the founder of Patronum, reached out to us with an idea that he and
+                                    his development team had been working on for a while - A supercharged SaaS
+                                    platform that allows Google Workspace™ administrators to save hours of tedious
+                                    manual work. Paul wanted a brand identity that reflects the multi-faceted
+                                    benefits of his platform, without compromising its approachable personality. The
+                                    other ask was for a website that would help them scale with their growth and
+                                    resonate with their target audience - larger and enterprise-level companies.
+                                </span>
+                            </p>
+                        </div>
+                        <div class="text_anim ">
+                            <p>
+                                <span>
+                                    Paul had an abstract idea that he wanted to turn into something concrete. He needed
+                                    help giving shape to that idea. He wanted to work with a reliable partner who could
+                                    help him design the brand identity and provide expert guidance on best practices for
+                                    launching and marketing a unique SaaS product.
+                                </span>
+                            </p>
+                        </div>
+                        <div class="text_anim ">
+                            <p>
+                                <span>
+                                    After benchmarking the market, the competition, and inputs gathered through
+                                    extensive research with key stakeholders and a sample audience, we deciphered the
+                                    design brief into three basic deliverables:
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+                    <div data-scroll class="new-grid">
                         <!--SERVICES-->
                         <ul class="list__services">
                             <li role="item">
                                 <article class="list__services__item">
                                     <h3 class="text_anim"><span>Branding<sup>01</sup></span></h3>
                                     <p class="text_anim">
-                                        <span>Creating brand identity for a tool that automates the management of
-                                            Google Workspace.</span>
+                                        <span>Creating a brand identity that visually represents the ethos and
+                                            multi-fold benefits of Patronum – The Google Workspace Manager. The brand
+                                            should be modern, impactful, engaging and approachable.</span>
                                     </p>
                                 </article>
                             </li>
@@ -409,9 +448,9 @@
                                         <apan></apan>
                                     </h3>
                                     <p class="text_anim"><span>
-                                            Translate the tools features into a website that is user-friendly and
-                                            incorporates visual product story with improved navigation. Implement a
-                                            fully responsive solution backed by WordPress CMS
+                                            Translate the tool's features into a website that is user-friendly,
+                                            interactive and incorporates a visual product story with improved
+                                            navigation. Implement a fully responsive solution backed by WordPress CMS.
                                         </span></p>
                                 </article>
                             </li>
@@ -420,7 +459,9 @@
                                     <h3 class="text_anim"><span>Marketing<sup>02</sup></span></h3>
 
                                     <p class="text_anim"><span>
-                                            Ensure SEO matrix & performance.
+                                            Implement a growth strategy with the right mix of industry-leading best
+                                            practices for search engines and social media platforms to help the brand
+                                            gain traction and grow organically on digital mediums.
                                         </span></p>
                                 </article>
                             </li>
@@ -431,7 +472,7 @@
                 <div id="marquee">
                     <div data-scroll data-scroll-target="#marquee">
                         <div>
-                            <h2 data-scroll data-scroll-speed="9" data-scroll-direction="horizontal"><span>Google
+                            <h2 data-scroll data-scroll-speed="9" data-scroll-direction="horizontal"><span>The Google
                                     workspace manager</span></h2>
                         </div>
                         <figure data-scroll data-scroll-speed="5">
@@ -452,11 +493,40 @@
                         <div class="text_anim ">
                             <p>
                                 <span>
-                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
-                                    and
-                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
-                                    an
-                                    effective and secure process.
+                                    After several iterations and discussions with the clients, a geometric logo concept
+                                    was finalised. The selected artwork used four triangles to create the letter 'P.' It
+                                    was based on a hexagonal shape with rounded corners. Using different shades of blue
+                                    gave the minimalist logo a modern and balanced appearance. The overall identity was
+                                    very modern, giving the new branding a very playful, vibrant feel.
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="concept" data-scroll>
+                        <figure data-scroll data-scroll-speed="1">
+                            <img alt="" class="p-r-l" src="assets/resources/img/patronum/logo-concept.png">
+                        </figure>
+                    </div>
+                </div>
+                <div id="portf" class="grid_intern">
+                    <div data-scroll>
+                        <div class="text_anim">
+                            <h2 data-scroll-target="#portf">
+                                <span>Website Design </span>
+                            </h2>
+                        </div>
+                        <div class="text_anim ">
+                            <p>
+                                <span>
+                                    After analysing all of the data collected during our interviews, audits, surveys,
+                                    and studies, our team built out the UX strategy for the new site. Typography, colour
+                                    palettes, and illustration styles all came together to create a cohesive brand
+                                    personality.<br>
+                                    The resulting website is optimised for conversions by incorporating a "single-click
+                                    access to all information' architecture. With the best on-page practices, the
+                                    website today serves as a first and last touchpoint for anyone looking to manage
+                                    their Google Workspace.
+
                                 </span>
                             </p>
                         </div>
@@ -473,15 +543,6 @@
                             <h2 data-scroll-target="#portf">
                                 <span>Color </span>
                             </h2>
-                        </div>
-                        <div class="text_anim ">
-                            <p><span>
-                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
-                                    and
-                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
-                                    an
-                                    effective and secure process.
-                                </span></p>
                         </div>
                     </div>
                 </div>
@@ -532,17 +593,6 @@
                                 <span>Fonts </span>
                             </h2>
                         </div>
-                        <div class="text_anim">
-                            <p>
-                                <span>
-                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
-                                    and
-                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
-                                    an
-                                    effective and secure process.
-                                </span>
-                            </p>
-                        </div>
                     </div>
                     <div class="concept" data-scroll>
                         <figure data-scroll data-scroll-speed="1">
@@ -557,28 +607,18 @@
                         </figure>
                     </div>
                 </div>
-                <div id="totem" class="blocco">
-                    <div data-scroll class="grid_intern">
+
+                <div id="portf" class="grid_intern">
+                    <div data-scroll>
                         <div class="text_anim">
-                            <h2>
+                            <h2 data-scroll-target="#portf">
                                 <span>MObile Preview </span>
                             </h2>
                         </div>
-                        <div class="text_anim">
-                            <p>
-                                <span>
-                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
-                                    and
-                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
-                                    an
-                                    effective and secure process.
-                                </span>
-                            </p>
-                        </div>
                     </div>
-                    <div class="left_block grid_intern" data-scroll>
-                        <figure>
-                            <img alt="" src="/assets/resources/img/patronum/Patronum-mobile.png">
+                    <div class="concept" data-scroll>
+                        <figure data-scroll data-scroll-speed="1">
+                            <img alt="fonts" src="/assets/resources/img/patronum/Patronum-mobile.png">
                         </figure>
                     </div>
                 </div>
