--- a/test.html
+++ b/test.html
@@ -24,143 +24,16 @@
         gtag('config', 'G-PKJE9LVB35');
     </script>
 </head>
-<div class="load-container">
-    <div class="loading-screen"></div>
-</div>
 
-<body data-barba="wrapper" class="dark">
-    <div class="init-load" style="    background: linear-gradient(45deg, #00020f, #040000);">
-        <div id="noise2"></div>
-        <div class="inner align-b">
-            <div class="counter c-first">
-                <div class="count">
-                    <!-- <span>0</span>
-                    <span class="t">1</span> -->
-                </div>
-            </div>
-            <div class=" counter c-second">
-                <div class="count">
-                    <!-- <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span class="t">0</span> -->
-                </div>
-            </div>
-            <div class="counter c-third">
-                <div class="count">
-                    <!-- <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span class="t">0</span> -->
-                </div>
-            </div>
-            <span class="percentage load-text" style="position: relative;">preparing your experience... </span>
-        </div>
+
+<body data-barba="wrapper" class="dark" data-header-sticky="true" data-menu-style="overlay" data-page-loader="true">
+    <div data-duration="5" class="alioth-page-loader" data-layout="dark">
+        <span class="apl-background"></span>
+
+        <div class="apl-count"></div>
+
     </div>
+
     <div class="site-header">
         <div class="header-wrapper">
 
@@ -168,25 +41,18 @@
 
                 <div class="site-logo">
                     <a href="index.html">
-                        <img alt="Site Logo" class="dark-logo" src="img/site-logo.png">
-                        <img alt="Site Logo Light" class="light-logo" src="img/site-logo-light.png">
+                        <img alt="Site Logo" class="dark-logo" src="/assets/resources/img/enigma-en-logo.svg">
+                        <!-- <img alt="Site Logo Light" class="light-logo" src="/assets/resources/img/enigma-en-logo.svg"> -->
                     </a>
                 </div>
 
             </div>
 
-
-            <div class="menu-toggle">
-                <span class="toggle-line"></span>
-                <span class="toggle-line"></span>
-            </div>
-
-
             <div class="site-navigation">
                 <span class="sub-back"><i class="icofont-long-arrow-left"></i></span>
 
                 <ul class="menu main-menu">
-                    <li class="menu-item has-children"><a href="index.html#.">Home</a>
+                    <li class="menu-item has-children"><a href="">Home</a>
 
                         <ul class="sub-menu">
                             <li class="menu-item"><a href="index.html">Agency</a></li>
@@ -260,15 +126,9 @@
 
             <div class="header-widgets">
 
-                <div class="header-widget">
-
-                    <div class="header-cta-but">
-                        <a data-hover="Start a Project"
-                            href="../cdn-cgi/l/email-protection.html#1c74797070735c6c7968747971796f327f7371">
-                            Start a Project
-                        </a>
-                    </div>
-
+                <div class="menu-toggle">
+                    <span class="toggle-line"></span>
+                    <span class="toggle-line"></span>
                 </div>
 
             </div>
@@ -767,6 +627,7 @@
 
 
     <script src="/assets/vendors/lib/plugins.js"></script>
+    <script src="/assets/resources/js/pages-js/preloader.js"></script>
     <script src="./assets/resources/js/cursor.js"></script>
     <script src="assets/resources/js/page.js"></script>
     <script>
