--- a/index.html
+++ b/index.html
@@ -24,142 +24,13 @@
         gtag('config', 'G-PKJE9LVB35');
     </script>
 </head>
-<div class="load-container">
-    <div class="loading-screen"></div>
-</div>
 
-<body data-barba="wrapper">
-    <div class="init-load">
-        <div id="noise2"></div>
-        <div class="inner">
-            <div class="counter c-first">
-                <div class="count">
-                    <span>0</span>
-                    <span class="t">1</span>
-                </div>
-            </div>
-            <div class=" counter c-second">
-                <div class="count">
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span class="t">0</span>
-                </div>
-            </div>
-            <div class="counter c-third">
-                <div class="count">
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span class="t">0</span>
-                </div>
-            </div>
-            <span class="percentage t">%</span>
-        </div>
+<body data-barba="wrapper" data-header-sticky="true" data-menu-style="overlay" data-page-loader="true">
+    <div data-duration="5" class="alioth-page-loader" data-layout="dark">
+        <span class="apl-background"></span>
+
+        <div class="apl-count"></div>
+
     </div>
 
     <header>
@@ -1033,31 +904,6 @@
 
                                     </div>
                                     <!--/Project-->
-
-                                    <!--Project-->
-                                    <div class="ar-work" data-tilt data-tilt-glare="true" data-tilt-max="10"
-                                        data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-ystart">
-                                        <!--Project URL-->
-                                        <a href="#">
-                                            <!--Project Image-->
-                                            <div class="ar-work-image o-image" data-scroll>
-                                                <img alt="Project Image" src="/assets/resources/img/work-kedar.png">
-                                            </div>
-                                            <!--/Project Image-->
-
-                                            <!--Project Title-->
-                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Kedarkala
-                                            </div>
-                                            <!--/Project Title-->
-
-                                            <!--Project Category-->
-                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Strategy,
-                                                Design, Development, Marketing</div>
-                                            <!--/Project Category-->
-                                        </a>
-
-                                    </div>
-                                    <!--/Project-->
                                     <!--Project-->
                                     <div class="ar-work">
 
@@ -1083,6 +929,111 @@
 
                                     </div>
                                     <!--/Project-->
+                                    <!--Project-->
+                                    <div class="ar-work">
+
+                                        <!--Project URL--><a href="#" data-tilt data-tilt-glare="true"
+                                            data-tilt-max="10" data-tilt-speed="20" data-cursor-text="View"
+                                            data-cursor="-color-bespin">
+
+                                            <!--Project Image-->
+                                            <div class="ar-work-image o-image" data-scroll>
+                                                <img alt="Project Image" src="/assets/resources/img/QuickX-Work.png">
+                                            </div>
+                                            <!--/Project Image-->
+
+                                            <!--Project Title-->
+                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Quickx</div>
+                                            <!--/Project Title-->
+
+                                            <!--Project Category-->
+                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Strategy,
+                                                Design, Marketing</div>
+                                            <!--/Project Category-->
+                                        </a>
+
+
+                                    </div>
+                                    <!--/Project-->
+                                    <!--Project-->
+                                    <div class="ar-work">
+
+                                        <!--Project URL--><a href="#" data-tilt data-tilt-glare="true"
+                                            data-tilt-max="10" data-tilt-speed="20" data-cursor-text="View"
+                                            data-cursor="-color-cert">
+
+                                            <!--Project Image-->
+                                            <div class="ar-work-image o-image" data-scroll>
+                                                <img alt="Project Image" src="/assets/resources/img/work-certvault.png">
+                                            </div>
+                                            <!--/Project Image-->
+
+                                            <!--Project Title-->
+                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Certvault
+                                            </div>
+                                            <!--/Project Title-->
+
+                                            <!--Project Category-->
+                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Strategy,
+                                                Design, Marketing</div>
+                                            <!--/Project Category-->
+                                        </a>
+
+
+                                    </div>
+                                    <!--/Project-->
+                                    <!--Project-->
+                                    <div class="ar-work">
+
+                                        <!--Project URL--><a href="#" data-tilt data-tilt-glare="true"
+                                            data-tilt-max="10" data-tilt-speed="20" data-cursor-text="View"
+                                            data-cursor="-color-bespin">
+
+                                            <!--Project Image-->
+                                            <div class="ar-work-image o-image" data-scroll>
+                                                <img alt="Project Image" src="/assets/resources/img/QuickX-Work.png">
+                                            </div>
+                                            <!--/Project Image-->
+
+                                            <!--Project Title-->
+                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Patra Pay
+                                            </div>
+                                            <!--/Project Title-->
+
+                                            <!--Project Category-->
+                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Strategy,
+                                                Design, Marketing</div>
+                                            <!--/Project Category-->
+                                        </a>
+
+
+                                    </div>
+                                    <!--/Project-->
+                                    <!--Project-->
+                                    <div class="ar-work" data-tilt data-tilt-glare="true" data-tilt-max="10"
+                                        data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-ystart">
+                                        <!--Project URL-->
+                                        <a href="#">
+                                            <!--Project Image-->
+                                            <div class="ar-work-image o-image" data-scroll>
+                                                <img alt="Project Image" src="/assets/resources/img/work-kedar.png">
+                                            </div>
+                                            <!--/Project Image-->
+
+                                            <!--Project Title-->
+                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Kedarkala
+                                            </div>
+                                            <!--/Project Title-->
+
+                                            <!--Project Category-->
+                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Strategy,
+                                                Design, Development, Marketing</div>
+                                            <!--/Project Category-->
+                                        </a>
+
+                                    </div>
+                                    <!--/Project-->
+
                                     <!--Project-->
                                     <div class="ar-work">
 
@@ -1134,32 +1085,7 @@
                                     <!--/Project-->
 
 
-                                    <!--Project-->
-                                    <div class="ar-work">
 
-                                        <!--Project URL--><a href="#" data-tilt data-tilt-glare="true"
-                                            data-tilt-max="10" data-tilt-speed="20" data-cursor-text="View"
-                                            data-cursor="-color-bespin">
-
-                                            <!--Project Image-->
-                                            <div class="ar-work-image o-image" data-scroll>
-                                                <img alt="Project Image" src="/assets/resources/img/QuickX-Work.png">
-                                            </div>
-                                            <!--/Project Image-->
-
-                                            <!--Project Title-->
-                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Quickx</div>
-                                            <!--/Project Title-->
-
-                                            <!--Project Category-->
-                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Strategy,
-                                                Design, Marketing</div>
-                                            <!--/Project Category-->
-                                        </a>
-
-
-                                    </div>
-                                    <!--/Project-->
 
 
 
