--- a/patronum.html
+++ b/patronum.html
@@ -23,7 +23,7 @@
 </head>
 
 <body data-barba="wrapper">
-    <div class="init-load">
+    <!-- <div class="init-load">
         <div id="noise2"></div>
         <div class="inner">
             <div class="counter c-first">
@@ -154,7 +154,7 @@
             </div>
             <span class="percentage t">%</span>
         </div>
-    </div>
+    </div> -->
 
     <header>
         <a class="en-logo" href="index.html">
