--- a/blogs.html
+++ b/blogs.html
@@ -26,138 +26,13 @@
     <div class="loading-screen"></div>
 </div>
 
-<body data-barba="wrapper" style="background: #fff;">
-    <div class="init-load">
-        <div id="noise2"></div>
-        <div class="inner">
-            <div class="counter c-first">
-                <div class="count">
-                    <span>0</span>
-                    <span class="t">1</span>
-                </div>
-            </div>
-            <div class=" counter c-second">
-                <div class="count">
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span class="t">0</span>
-                </div>
-            </div>
-            <div class="counter c-third">
-                <div class="count">
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span>0</span>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
-                    <span>4</span>
-                    <span>5</span>
-                    <span>6</span>
-                    <span>7</span>
-                    <span>8</span>
-                    <span>9</span>
-                    <span class="t">0</span>
-                </div>
-            </div>
-            <span class="percentage t">%</span>
-        </div>
+<body data-barba="wrapper" data-header-sticky="true" data-menu-style="overlay" data-page-loader="true">
+
+    <div data-duration="5" class="alioth-page-loader" data-layout="dark">
+        <span class="apl-background"></span>
+
+        <div class="apl-count"></div>
+
     </div>
 
     <header>
@@ -301,7 +176,7 @@
 
                         <!-- Page Title -->
                         <div class="page-title">
-                            <h1 class=" big-title"><span class="header_title_line"><span>
+                            <h1 class=" big-title text-rveal"><span class="header_title_line"><span>
                                         Stories
                                     </span></span>
 
@@ -724,6 +599,7 @@
 
 
     <script src="/assets/vendors/lib/plugins.js"></script>
+    <script src="/assets/resources/js/pages-js/preloader.js"></script>
     <script src="./assets/resources/js/cursor.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script
