--- a/patronum.html
+++ b/patronum.html
@@ -414,7 +414,7 @@
                     <div data-scroll>
                         <div class="text_anim">
                             <h2 data-scroll-target="#portf">
-                                <span>Color </span>
+                                <span>Colours </span>
                             </h2>
                         </div>
                     </div>
@@ -423,7 +423,7 @@
                     <div>
                         <h2 data-scroll-target="#colori" data-scroll data-scroll-speed="2">
                             <span>
-                                Colours Palette </span>
+                                Colors Palette </span>
                         </h2>
                         <ul data-scroll style="grid-template-columns: 33% 27% 20% 15%">
                             <li>
@@ -485,13 +485,15 @@
                     <div data-scroll>
                         <div class="text_anim">
                             <h2 data-scroll-target="#portf">
-                                <span>MObile Preview </span>
+                                <span>Moobile Preview </span>
                             </h2>
                         </div>
                     </div>
-                    <div class="concept" data-scroll>
-                        <figure data-scroll data-scroll-speed="1">
-                            <img alt="fonts" src="/assets/resources/img/patronum/Patronum-mobile.png">
+                </div>
+                <div id="poster" class="blocco">
+                    <div class="left_block grid_intern" data-scroll>
+                        <figure>
+                            <img alt="" src="/assets/resources/img/patronum/Patronum-mobile.png">
                         </figure>
                     </div>
                 </div>
