--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
 
                                         <!--Project URL--><a href="#" data-tilt data-tilt-glare="true"
                                             data-tilt-max="10" data-tilt-speed="20" data-cursor-text="View"
-                                            data-cursor="-color-bespin">
+                                            data-cursor="-color-q">
 
                                             <!--Project Image-->
                                             <div class="ar-work-image o-image" data-scroll>
@@ -987,7 +987,7 @@
 
                                         <!--Project URL--><a href="#" data-tilt data-tilt-glare="true"
                                             data-tilt-max="10" data-tilt-speed="20" data-cursor-text="View"
-                                            data-cursor="-color-bespin">
+                                            data-cursor="-color-patra">
 
                                             <!--Project Image-->
                                             <div class="ar-work-image o-image" data-scroll>
@@ -1011,7 +1011,7 @@
                                     <!--/Project-->
                                     <!--Project-->
                                     <div class="ar-work" data-tilt data-tilt-glare="true" data-tilt-max="10"
-                                        data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-ystart">
+                                        data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-bl">
                                         <!--Project URL-->
                                         <a href="#">
                                             <!--Project Image-->
@@ -1039,7 +1039,7 @@
 
                                         <!--Project URL--><a href="#" data-tilt data-tilt-glare="true"
                                             data-tilt-max="10" data-tilt-speed="20" data-cursor-text="View"
-                                            data-cursor="-color-cert">
+                                            data-cursor="-color-dharan">
 
                                             <!--Project Image-->
                                             <div class="ar-work-image o-image" data-scroll>
