--- a/works2.html
+++ b/works2.html
@@ -120,67 +120,92 @@
                                                 </div>
                                             </div>
                                             <div class="cs-title">
-                                                <a href="" data-cursor-text="View"
+                                                <a href="patronum.html" data-cursor-text="View"
                                                     data-cursor=" -color-accent-lilac">Patronum</a>
                                             </div>
                                         </a>
                                     </div>
                                     <div class="cas-project">
-                                        <div class="cs-image">
-                                            <img alt="Project Image" src="/assets/resources/img/DMTCA-work.png">
-                                        </div>
-                                        <div class="cs-title">
-                                            <a href="">Dmtca</a>
-                                        </div>
+                                        <a href="" data-cursor-text="View" data-cursor=" -color-dmtca">
+                                            <div class="cs-image">
+                                                <img alt="Project Image" src="/assets/resources/img/DMTCA-work.png">
+                                            </div>
+                                            <div class="cs-title">
+                                                <a href="dmtca.html" data-cursor-text="View"
+                                                    data-cursor=" -color-dmtca">Dmtca</a>
+                                            </div>
+                                        </a>
                                     </div>
                                     <div class="cas-project">
-                                        <div class="cs-image">
-                                            <img alt="Project Image" src="/assets/resources/img/QuickX-Work.png">
-                                        </div>
-                                        <div class="cs-title">
-                                            <a href="">QuickX</a>
-                                        </div>
+                                        <a href="" data-cursor-text="View" data-cursor=" -color-q">
+                                            <div class="cs-image">
+                                                <img alt="Project Image" src="/assets/resources/img/QuickX-Work.png">
+                                            </div>
+                                            <div class="cs-title">
+                                                <a href="" data-cursor-text="View" data-cursor=" -color-q">QuickX</a>
+                                            </div>
+                                        </a>
                                     </div>
                                     <div class="cas-project">
-                                        <div class="cs-image">
-                                            <img alt="Project Image" src="/assets/resources/img/work-certvault.png">
-                                        </div>
-                                        <div class="cs-title">
-                                            <a href="">Certvault</a>
-                                        </div>
+                                        <a href="" data-cursor-text="View" data-cursor=" -color-cert">
+                                            <div class="cs-image">
+                                                <img alt="Project Image" src="/assets/resources/img/work-certvault.png">
+                                            </div>
+                                            <div class="cs-title">
+                                                <a href="" data-cursor-text="View"
+                                                    data-cursor=" -color-cert">Certvault</a>
+                                            </div>
+                                        </a>
+
                                     </div>
                                     <div class="cas-project">
-                                        <div class="cs-image">
-                                            <img alt="Project Image" src="/assets/resources/img/Patrapay-work.png">
-                                        </div>
-                                        <div class="cs-title">
-                                            <a href="">Patra Pay</a>
-                                        </div>
+                                        <a href="" data-cursor-text="View" data-cursor=" -color-patra">
+                                            <div class="cs-image">
+                                                <img alt="Project Image" src="/assets/resources/img/Patrapay-work.png">
+                                            </div>
+                                            <div class="cs-title">
+                                                <a href="" data-cursor-text="View" data-cursor=" -color-patra">Patra
+                                                    Pay</a>
+                                            </div>
+                                        </a>
+
                                     </div>
                                     <div class="cas-project">
-                                        <div class="cs-image">
-                                            <img alt="Project Image" src="/assets/resources/img/work-kedar.png">
-                                        </div>
-                                        <div class="cs-title">
-                                            <a href="project-8.html">Kedarkala</a>
-                                        </div>
+                                        <a href="" data-cursor-text="View" data-cursor=" -color-bl">
+                                            <div class="cs-image">
+                                                <img alt="Project Image" src="/assets/resources/img/work-kedar.png">
+                                            </div>
+                                            <div class="cs-title">
+                                                <a href="project-8.html" data-cursor-text="View"
+                                                    data-cursor=" -color-bl">Kedarkala</a>
+                                            </div>
+                                        </a>
+
                                     </div>
 
                                     <div class="cas-project">
-                                        <div class="cs-image">
-                                            <img alt="Project Image" src="/assets/resources/img/dharan-work.png">
-                                        </div>
-                                        <div class="cs-title">
-                                            <a href="project-4.html">Dharan</a>
-                                        </div>
+                                        <a href="" data-cursor-text="View" data-cursor=" -color-dharan">
+                                            <div class="cs-image">
+                                                <img alt="Project Image" src="/assets/resources/img/dharan-work.png">
+                                            </div>
+                                            <div class="cs-title">
+                                                <a href="project-4.html" data-cursor-text="View"
+                                                    data-cursor=" -color-dharan">Dharan</a>
+                                            </div>
+                                        </a>
+
                                     </div>
                                     <div class="cas-project">
-                                        <div class="cs-image">
-                                            <img alt="Project Image" src="/assets/resources/img/pdtl-work.png">
-                                        </div>
-                                        <div class="cs-title">
-                                            <a href="project-6.html">Pdtl</a>
-                                        </div>
+                                        <a href="" data-cursor-text="View" data-cursor=" -color-pdtl">
+                                            <div class="cs-image">
+                                                <img alt="Project Image" src="/assets/resources/img/pdtl-work.png">
+                                            </div>
+                                            <div class="cs-title">
+                                                <a href="project-6.html" data-cursor-text="View"
+                                                    data-cursor=" -color-pdtl">Pdtl</a>
+                                            </div>
+                                        </a>
+
                                     </div>
 
 
